<resources>
    <string name="app_name">Layouts</string>
    <string name="filmTitle">Beauty and the Beast</string>
    <string name="filmInfo">March 2017 PG 129 minutes</string>
    <string name="btnRent">RENT FOR 9,99€</string>
    <string name="btnBuy">BUY FOR 29,99€</string>
    <string name="lblRatings">242 ratings</string>
    <string name="lblFamily">Family</string>
    <string name="lblTomato">71%</string>
    <string name="lblSimilar">Similar</string>
    <string name="synopsis">The story and characters you know and love come to spectacular life in the live-action adaption of Disney\'s animated classic Beauty and the Beast.</string>
</resources>