<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/filmImg"
        android:src="@drawable/header"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmImg"
        android:id="@+id/filmTitle"
        android:text="@string/filmTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filmInfo"
        android:text="@string/filmInfo"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@+id/filmTitle"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filmBookmark"
        android:src="@drawable/ic_bookmark"
        android:layout_below="@+id/filmImg"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_2x"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRent"
        android:text="@string/btnRent"
        android:layout_below="@+id/filmInfo"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin_2x"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBuy"
        android:layout_alignBottom="@+id/btnRent"
        android:layout_alignParentEnd="true"
        android:text="@string/btnBuy"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/viewFirst"
        android:background="@color/gray_divider"
        android:layout_below="@+id/btnRent"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_2x"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFirst"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_alignStart="@+id/viewFirst"
        android:src="@drawable/ic_baseline_edit_24"
        app:tint="@color/white"
        android:id="@+id/iconRatings"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblRatings"
        android:layout_below="@+id/iconRatings"
        android:layout_alignStart="@+id/viewFirst"
        android:layout_marginStart="@dimen/margin"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/lblRatings"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconRatings"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-169dp"
        android:layout_toStartOf="@+id/viewFirst"
        android:src="@drawable/ic_family"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconFamily"
        android:layout_alignStart="@id/iconFamily"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblFamily" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconRatings"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-248dp"
        android:layout_toStartOf="@+id/viewFirst"
        android:src="@drawable/tomato"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconTomato"
        android:layout_alignStart="@id/iconTomato"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblTomato" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconRatings"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-325dp"
        android:layout_toStartOf="@+id/viewFirst"
        android:src="@drawable/ic_similar"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconTomato"
        android:layout_alignStart="@id/iconSimilar"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/lblSimilar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/viewSecond"
        android:background="@color/gray_divider"
        android:layout_below="@+id/lblRatings"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_2x"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@+id/viewSecond"
        android:layout_alignStart="@+id/viewSecond"
        android:id="@+id/lblSynopsis"
        android:textSize="@dimen/synopsis"
        android:text="@string/synopsis"/>
</RelativeLayout>