<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/filmImg"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/filmTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filmImg" />

    <TextView
        android:id="@+id/filmInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/filmInfo"
        app:layout_constraintStart_toStartOf="@id/filmTitle"
        app:layout_constraintTop_toBottomOf="@id/filmTitle" />

    <ImageView
        android:id="@+id/filmBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_2x"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintBottom_toBottomOf="@id/filmTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/filmTitle" />

    <Button
        android:id="@+id/btnRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/btnRent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filmInfo" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin_2x"
        android:text="@string/btnBuy"
        app:layout_constraintBottom_toBottomOf="@id/btnRent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnRent" />

    <View
        android:id="@+id/viewFirst"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toStartOf="@+id/iconFamily"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFirst"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin_2x"
        android:text="@string/lblRatings"
        app:layout_constraintEnd_toEndOf="@+id/iconRatings"
        app:layout_constraintStart_toStartOf="@id/iconRatings"
        app:layout_constraintTop_toBottomOf="@+id/iconRatings" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:src="@drawable/ic_family"
        app:layout_constraintBottom_toBottomOf="@+id/iconRatings"
        app:layout_constraintEnd_toStartOf="@+id/iconTomato"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iconRatings"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin_2x"
        android:text="@string/lblFamily"
        app:layout_constraintEnd_toEndOf="@+id/iconFamily"
        app:layout_constraintStart_toStartOf="@id/iconFamily"
        app:layout_constraintTop_toBottomOf="@+id/iconFamily" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:src="@drawable/tomato"
        app:layout_constraintBottom_toBottomOf="@+id/iconFamily"
        app:layout_constraintEnd_toStartOf="@+id/iconSimilar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iconFamily"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin_2x"
        android:text="@string/lblTomato"
        app:layout_constraintEnd_toEndOf="@+id/iconTomato"
        app:layout_constraintStart_toStartOf="@id/iconTomato"
        app:layout_constraintTop_toBottomOf="@+id/iconTomato" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iconSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginRight="@dimen/margin_2x"
        android:src="@drawable/ic_similar"
        app:layout_constraintBottom_toBottomOf="@+id/iconTomato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iconTomato"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin_2x"
        android:text="@string/lblSimilar"
        app:layout_constraintEnd_toEndOf="@+id/iconSimilar"
        app:layout_constraintStart_toStartOf="@id/iconSimilar"
        app:layout_constraintTop_toBottomOf="@+id/iconSimilar" />

    <View
        android:id="@+id/viewSecond"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblRatings" />

    <TextView
        android:id="@+id/lblSynopsis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/synopsis"
        android:textSize="@dimen/synopsis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewSecond"
        app:layout_constraintStart_toStartOf="@+id/viewSecond"
        app:layout_constraintTop_toBottomOf="@+id/viewSecond" />

</androidx.constraintlayout.widget.ConstraintLayout>